going with a different approach - won't work through docker, though

--- a/docker/ar-opencv/Dockerfile
+++ b/docker/ar-opencv/Dockerfile
@@ -2,6 +2,9 @@ FROM kavolorn/opencv
 
 MAINTAINER Lewis Brown <github.com/ramity>
 
+RUN apt-get update -y
+RUN apt-get install -y libgtk2.0-dev pkg-config
+
 WORKDIR /project
 
 ENTRYPOINT ["tail", "-f", "/dev/null"]
